--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <div class="container">
                 <div class="four-col-grid">
                     <div class="footer-widget">
-                        <img src="images/logo.png" alt="">
+                        <img class="logo-img" src="images/logo.png" alt="">
                     </div>
                     <div class="footer-widget">
                         <h5 class="h4">The Lavender Cafe</h5>
@@ -110,17 +110,17 @@
                             <li><a href="#profile">Profile</a></li>
                         </ul>
                     </div>
-                    <div class="footer-social">
+                    <div class="footer-widget">
                         <h5 class="h4">Follow us:</h5>
-                        <ul class="nav social-nav">
-                            <li class="nav-item">
-                                <a href="" class="nav-link" target="_blank">
-                                    <img src="" alt="The Lavender Cafe - Instagram">
+                        <ul class="social-nav">
+                            <li>
+                                <a href="https://www.instagram.com/khrystyna_dol" class="social-nav-link" target="_blank">
+                                    <img class="social-icon" src="./images/instagram.png" alt="The Lavender Cafe - Instagram">
                                 </a>
                             </li>
-                            <li class="nav-item">
-                                <a href="" class="nav-link" target="_blank">
-                                    <img src="" alt="The Lavender Cafe - Facebook">
+                            <li>
+                                <a href="https://www.facebook.com/hrystyna.dol" class="nav-link" target="_blank">
+                                    <img class="social-icon" src="./images/facebook.png" alt="The Lavender Cafe - Facebook">
                                 </a>
                             </li>
                         </ul>
