--- a/registration.html
+++ b/registration.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Registration Page</title>
     <!--    <link rel="stylesheet" href="/style-1.css">-->
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
 <nav class="navbar colored-navbar">
