--- a/menu.html
+++ b/menu.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Menu Page</title>
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 <body>
 <nav class="navbar colored-navbar">
