--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Login Page</title>
 <!--    <link rel="stylesheet" href="/style-1.css">-->
-    <link rel="stylesheet" type="text/css" href="./style.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
 <nav class="navbar colored-navbar">
@@ -66,7 +66,7 @@
 <!--<head>-->
 <!--    <meta charset="UTF-8">-->
 <!--    <title>Login Page</title>-->
-<!--    <link rel="stylesheet" href="/style.css">-->
+<!--    <link rel="stylesheet" href="/styles.css">-->
 <!--</head>-->
 <!--<body>-->
 <!--<div class="container">-->
