Profile page design and navigation

--- a/index.html
+++ b/index.html
@@ -12,25 +12,23 @@
           href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.css">
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
-
+<nav class="navbar">
+    <div class="container">
+        <a href="#" class="logo">
+            <img src="images/logo.png" alt="">
+            <p class="cafe-name">The Lavender cafe</p>
+        </a>
+        <ul class="nav-items">
+            <li><a href="#home" class="nav-item">Home</a></li>
+            <li><a href="menu.html" class="nav-item">Menu</a></li>
+            <li><a href="#about" class="nav-item">About</a></li>
+            <li><a href="#contact" class="nav-item">Contact</a></li>
+            <li><a href="profile.html" class="nav-item">Profile</a></li>
+        </ul>
+        <div class="nav-toggler"><i class="ri-menu-fill"></i></div>
+    </div>
+</nav>
 <body>
-    <nav class="navbar">
-        <div class="container">
-            <a href="#" class="logo">
-                <img src="images/logo.png" alt="">
-                <p class="cafe-name">The Lavender cafe</p>
-            </a>
-                <ul class="nav-items">
-                    <li><a href="#home" class="nav-item">Home</a></li>
-                    <li><a href="#menu" class="nav-item">Menu</a></li>
-                    <li><a href="#about" class="nav-item">About</a></li>
-                    <li><a href="#contact" class="nav-item">Contact</a></li>
-                    <li><a href="#profile" class="nav-item">Profile</a></li>
-                </ul>
-            <div class="nav-toggler"><i class="ri-menu-fill"></i></div>
-        </div>
-    </nav>
-
     <div class="slide" id="home">
         <div class="container">
             <p class="welcome">Welcome to</p>
@@ -91,51 +89,50 @@
             </div>
         </div>
     </section>
-
-    <!-- FOOTER -->
-    <footer>
-        <div class="footer-top">
-            <div class="container">
-                <div class="four-col-grid">
-                    <div class="footer-widget">
-                        <img class="logo-img" src="images/logo.png" alt="">
-                    </div>
-                    <div class="footer-widget">
-                        <h5 class="h4">The Lavender Cafe</h5>
-                        <ul>
-                            <li><a href="#home">Home</a></li>
-                            <li><a href="#menu">Menu</a></li>
-                            <li><a href="#about">About</a></li>
-                            <li><a href="#contact">Contact</a></li>
-                            <li><a href="#profile">Profile</a></li>
-                        </ul>
-                    </div>
-                    <div class="footer-widget">
-                        <h5 class="h4">Follow us:</h5>
-                        <ul class="social-nav">
-                            <li>
-                                <a href="https://www.instagram.com/khrystyna_dol" class="social-nav-link" target="_blank">
-                                    <img class="social-icon" src="./images/instagram.png" alt="The Lavender Cafe - Instagram">
-                                </a>
-                            </li>
-                            <li>
-                                <a href="https://www.facebook.com/hrystyna.dol" class="nav-link" target="_blank">
-                                    <img class="social-icon" src="./images/facebook.png" alt="The Lavender Cafe - Facebook">
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="footer-bottom">
-            <p class="simple-text">© Copyright 2023 The Lavender Cafe. All rights reserved. Designed by Khrystyna Dolynska</p>
-        </div>
-    </footer>
-
     <!-- JS -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <script src="./main.js"></script>
 </body>
+<!-- FOOTER -->
+<footer>
+    <div class="footer-top">
+        <div class="container">
+            <div class="four-col-grid">
+                <div class="footer-widget">
+                    <img class="logo-img" src="images/logo.png" alt="">
+                </div>
+                <div class="footer-widget">
+                    <h5 class="h4">The Lavender Cafe</h5>
+                    <ul>
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="menu.html">Menu</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                        <li><a href="profile.html">Profile</a></li>
+                        <li><a href="login.html">Log in</a></li>
+                    </ul>
+                </div>
+                <div class="footer-widget">
+                    <h5 class="h4">Follow us:</h5>
+                    <ul class="social-nav">
+                        <li>
+                            <a href="https://www.instagram.com/khrystyna_dol" class="social-nav-link" target="_blank">
+                                <img class="social-icon" src="./images/instagram.png" alt="The Lavender Cafe - Instagram">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.facebook.com/hrystyna.dol" class="nav-link" target="_blank">
+                                <img class="social-icon" src="./images/facebook.png" alt="The Lavender Cafe - Facebook">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="footer-bottom">
+        <p class="simple-text">© Copyright 2023 The Lavender Cafe. All rights reserved. Designed by Khrystyna Dolynska</p>
+    </div>
+</footer>
 </html>
