--- a/profile.html
+++ b/profile.html
@@ -3,37 +3,123 @@
 <head>
   <meta charset="UTF-8">
   <title>Profile Page</title>
+<!--  <link rel="stylesheet" type="text/css" href="styles-1.css">-->
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
-<body>
-<nav class="navbar">
+<nav class="navbar colored-navbar">
   <div class="container">
     <a href="#" class="logo">
       <img src="images/logo.png" alt="">
       <p class="cafe-name">The Lavender cafe</p>
     </a>
     <ul class="nav-items">
-      <li><a href="#home" class="nav-item">Home</a></li>
-      <li><a href="#menu" class="nav-item">Menu</a></li>
-      <li><a href="#about" class="nav-item">About</a></li>
-      <li><a href="#contact" class="nav-item">Contact</a></li>
-      <li><a href="#profile" class="nav-item">Profile</a></li>
+      <li><a href="index.html#home" class="nav-item">Home</a></li>
+      <li><a href="menu.html" class="nav-item">Menu</a></li>
+      <li><a href="index.html#about" class="nav-item">About</a></li>
+      <li><a href="index.html#contact" class="nav-item">Contact</a></li>
+      <li><a href="profile.html" class="nav-item">Profile</a></li>
     </ul>
     <div class="nav-toggler"><i class="ri-menu-fill"></i></div>
   </div>
 </nav>
-<div class="container">
-  <h1>Profile</h1>
-  <div class="user-info">
-    <p><strong>Name:</strong> John</p>
-    <p><strong>Surname:</strong> Smith</p>
-    <p><strong>Email:</strong> johnsmith@example.com</p>
-    <p><strong>Phone:</strong> 123-456-7890</p>
+<body>
+<div class="profile-card">
+  <h2>Profile</h2>
+  <div class="card">
+    <div class="card-body">
+      <i class="fa fa-pen fa-xs edit"></i>
+      <table>
+        <tbody>
+        <tr>
+          <td>Name</td>
+          <td>:</td>
+          <td>ImDezCode</td>
+        </tr>
+        <tr>
+          <td>Surname</td>
+          <td>:</td>
+          <td>ImDezCode</td>
+        </tr>
+        <tr>
+          <td>Email</td>
+          <td>:</td>
+          <td>imdezcode@gmail.com</td>
+        </tr>
+        <tr>
+          <td>Address</td>
+          <td>:</td>
+          <td>Bali, Indonesia</td>
+        </tr>
+        <tr>
+          <td>Hobbies</td>
+          <td>:</td>
+          <td>Diving, Reading Book</td>
+        </tr>
+        <tr>
+          <td>Job</td>
+          <td>:</td>
+          <td>Web Developer</td>
+        </tr>
+        <tr>
+          <td>Skill</td>
+          <td>:</td>
+          <td>PHP, HTML, CSS, Java</td>
+        </tr>
+        </tbody>
+      </table>
+    </div>
   </div>
-  <div class="buttons">
-    <button class="primary-btn">Log Out</button>
-    <button class="primary-btn red-btn">Delete Account</button>
-  </div>
+<!--<div class="form-container">-->
+<!--  <h1>Profile</h1>-->
+<!--  <div class="user-info">-->
+<!--    <p><strong>Name:</strong> John</p>-->
+<!--    <p><strong>Surname:</strong> Smith</p>-->
+<!--    <p><strong>Email:</strong> johnsmith@example.com</p>-->
+<!--    <p><strong>Phone:</strong> 123-456-7890</p>-->
+<!--  </div>-->
+<!--  <div class="buttons">-->
+<!--    <button class="primary-btn">Log Out</button>-->
+<!--    <button class="primary-btn red-btn">Delete Account</button>-->
+<!--  </div>-->
 </div>
 </body>
+<footer>
+  <div class="footer-top">
+    <div class="container">
+      <div class="four-col-grid">
+        <div class="footer-widget">
+          <img class="logo-img" src="images/logo.png" alt="">
+        </div>
+        <div class="footer-widget">
+          <h5 class="h4">The Lavender Cafe</h5>
+          <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#menu">Menu</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li><a href="#profile">Profile</a></li>
+          </ul>
+        </div>
+        <div class="footer-widget">
+          <h5 class="h4">Follow us:</h5>
+          <ul class="social-nav">
+            <li>
+              <a href="https://www.instagram.com/khrystyna_dol" class="social-nav-link" target="_blank">
+                <img class="social-icon" src="./images/instagram.png" alt="The Lavender Cafe - Instagram">
+              </a>
+            </li>
+            <li>
+              <a href="https://www.facebook.com/hrystyna.dol" class="nav-link" target="_blank">
+                <img class="social-icon" src="./images/facebook.png" alt="The Lavender Cafe - Facebook">
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="footer-bottom">
+    <p class="simple-text">© Copyright 2023 The Lavender Cafe. All rights reserved. Designed by Khrystyna Dolynska</p>
+  </div>
+</footer>
 </html>
