--- a/registration.html
+++ b/registration.html
@@ -14,11 +14,11 @@
             <p class="cafe-name">The Lavender cafe</p>
         </a>
         <ul class="nav-items">
-            <li><a href="#home" class="nav-item">Home</a></li>
-            <li><a href="#menu" class="nav-item">Menu</a></li>
-            <li><a href="#about" class="nav-item">About</a></li>
-            <li><a href="#contact" class="nav-item">Contact</a></li>
-            <li><a href="#profile" class="nav-item">Profile</a></li>
+            <li><a href="index.html#home" class="nav-item">Home</a></li>
+            <li><a href="menu.html" class="nav-item">Menu</a></li>
+            <li><a href="index.html#about" class="nav-item">About</a></li>
+            <li><a href="index.html#contact" class="nav-item">Contact</a></li>
+            <li><a href="profile.html" class="nav-item">Profile</a></li>
         </ul>
         <div class="nav-toggler"><i class="ri-menu-fill"></i></div>
     </div>
@@ -51,48 +51,49 @@
                     </label>
             </div>
             <div class="center-btn"><button class='primary-btn'>Register</button></div>
-            <div class='form-spacing'>Already registered? <span class='form-highlight'>Log in</span></div>
+            <div class='form-spacing'>Already registered? <a href="login.html"><span class='form-highlight'>Log in</span></a></div>
         </div>
     </div>
 </div>
-
-<!--<!DOCTYPE html>-->
-<!--<html>-->
-<!--<head>-->
-<!--    <meta charset="UTF-8">-->
-<!--    <title>Registration Page</title>-->
-<!--    <link rel="stylesheet" href="/styles.css">-->
-<!--</head>-->
-<!--<body>-->
-<!--<div class="container">-->
-<!--    <h1>Register</h1>-->
-<!--    <form>-->
-<!--        <div class="form-group">-->
-<!--            <label for="name">Name:</label>-->
-<!--            <input type="text" id="name" name="name" placeholder="Enter your name" required>-->
-<!--        </div>-->
-<!--        <div class="form-group">-->
-<!--            <label for="surname">Surname:</label>-->
-<!--            <input type="text" id="surname" name="surname" placeholder="Enter your surname" required>-->
-<!--        </div>-->
-<!--        <div class="form-group">-->
-<!--            <label for="email">Email:</label>-->
-<!--            <input type="email" id="email" name="email" placeholder="Enter your email" required>-->
-<!--        </div>-->
-<!--        <div class="form-group">-->
-<!--            <label for="phone">Phone:</label>-->
-<!--            <input type="tel" id="phone" name="phone" placeholder="Enter your phone number" required>-->
-<!--        </div>-->
-<!--        <div class="form-group">-->
-<!--            <label for="password">Password:</label>-->
-<!--            <input type="password" id="password" name="password" placeholder="Enter your password" required>-->
-<!--        </div>-->
-<!--        <div class="form-group">-->
-<!--            <label for="confirm-password">Confirm Password:</label>-->
-<!--            <input type="password" id="confirm-password" name="confirm-password" placeholder="Re-enter your password" required>-->
-<!--        </div>-->
-<!--        <button type="submit" class="primary-btn">Register</button>-->
-<!--    </form>-->
-<!--</div>-->
-<!--</body>-->
-<!--</html>-->
+</body>
+<!-- FOOTER -->
+<footer>
+    <div class="footer-top">
+        <div class="container">
+            <div class="four-col-grid">
+                <div class="footer-widget">
+                    <img class="logo-img" src="images/logo.png" alt="">
+                </div>
+                <div class="footer-widget">
+                    <h5 class="h4">The Lavender Cafe</h5>
+                    <ul>
+                        <li><a href="index.html#home">Home</a></li>
+                        <li><a href="menu.html">Menu</a></li>
+                        <li><a href="index.html#about">About</a></li>
+                        <li><a href="index.html#contact">Contact</a></li>
+                        <li><a href="profile.html">Profile</a></li>
+                    </ul>
+                </div>
+                <div class="footer-widget">
+                    <h5 class="h4">Follow us:</h5>
+                    <ul class="social-nav">
+                        <li>
+                            <a href="https://www.instagram.com/khrystyna_dol" class="social-nav-link" target="_blank">
+                                <img class="social-icon" src="./images/instagram.png" alt="The Lavender Cafe - Instagram">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.facebook.com/hrystyna.dol" class="nav-link" target="_blank">
+                                <img class="social-icon" src="./images/facebook.png" alt="The Lavender Cafe - Facebook">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="footer-bottom">
+        <p class="simple-text">© Copyright 2023 The Lavender Cafe. All rights reserved. Designed by Khrystyna Dolynska</p>
+    </div>
+</footer>
+</html>
