Profile edit + navigation edit

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             <p class="welcome">Welcome to</p>
             <h1 class="h1">The Lavender Cafe</h1>
             <p class="quote">"One cannot think well, love well, sleep well, if one has not dined well." - Virginia Woolf</p>
-            <a href="#" class="primary-btn">View menu</a>
-            <a href="#" class="primary-btn secondary-btn">Contact Us</a>
+            <a href="menu.html" class="primary-btn">View menu</a>
+            <a href="#contact" class="primary-btn secondary-btn">Contact Us</a>
         </div>
     </div>
 
