--- a/profile.html
+++ b/profile.html
@@ -33,22 +33,22 @@
         <tr>
           <td>Name</td>
           <td>:</td>
-          <td>ImDezCode</td>
+          <td>John</td>
         </tr>
         <tr>
           <td>Surname</td>
           <td>:</td>
-          <td>ImDezCode</td>
+          <td>Smith</td>
         </tr>
         <tr>
           <td>Email</td>
           <td>:</td>
-          <td>imdezcode@gmail.com</td>
+          <td>johnsmith@example.com</td>
         </tr>
         <tr>
-          <td>Address</td>
+          <td>Phone</td>
           <td>:</td>
-          <td>Bali, Indonesia</td>
+          <td>123-456-7890</td>
         </tr>
         <tr>
           <td>Hobbies</td>
@@ -67,6 +67,10 @@
         </tr>
         </tbody>
       </table>
+      <div class="buttons">
+        <button class="primary-btn">Log Out</button>
+        <button class="primary-btn red-btn">Delete Account</button>
+      </div>
     </div>
   </div>
 <!--<div class="form-container">-->
