Editing admin pages, checking everything, grooming

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container">
         <a href="#" class="logo">
             <img src="images/logo.png" alt="">
-            <p class="cafe-name">The Lavender cafe</p>
+            <p class="cafe-name h2">The Lavender cafe</p>
         </a>
         <ul class="nav-items">
             <li><a href="#home" class="nav-item">Home</a></li>
@@ -31,9 +31,9 @@
 <body>
     <div class="slide" id="home">
         <div class="container">
-            <p class="welcome">Welcome to</p>
+            <p class="secondary-font h2">Welcome to</p>
             <h1 class="h1">The Lavender Cafe</h1>
-            <p class="quote">"One cannot think well, love well, sleep well, if one has not dined well." - Virginia Woolf</p>
+            <p class="secondary-font h2">"One cannot think well, love well, sleep well, if one has not dined well." - Virginia Woolf</p>
             <a href="menu.html" class="primary-btn">View menu</a>
             <a href="#contact" class="primary-btn secondary-btn">Contact Us</a>
         </div>
@@ -46,9 +46,9 @@
                 <img src="./images/cafe-photo.png" alt="">
                 <div class="content">
                     <h2 class="h2">Some info about us</h2>
-                    <p class="simple-text">The Lavender Cafe is a charming addition to the city's culinary scene, having opened its doors in 2023. Located in a cozy corner of town, the cafe exudes an ambiance of peace and tranquility with its soft lavender decor and warm lighting.</p>
-                    <p class="simple-text">From the moment you step inside, you'll feel your worries melt away as you're enveloped in the comforting aroma of freshly brewed coffee and sweet treats.</p>
-                    <p class="simple-text">The menu features an array of delightful offerings, from the classic coffee and tea to artisanal pastries and cakes infused with the fragrant herb.</p>
+                    <p class="simple-text h5">The Lavender Cafe is a charming addition to the city's culinary scene, having opened its doors in 2023. Located in a cozy corner of town, the cafe exudes an ambiance of peace and tranquility with its soft lavender decor and warm lighting.</p>
+                    <p class="simple-text h5">From the moment you step inside, you'll feel your worries melt away as you're enveloped in the comforting aroma of freshly brewed coffee and sweet treats.</p>
+                    <p class="simple-text h5">The menu features an array of delightful offerings, from the classic coffee and tea to artisanal pastries and cakes infused with the fragrant herb.</p>
 <!--                 <p class="simple-text">The Lavender Latte is a must-try, made with a shot of espresso and a hint of lavender syrup, it's the perfect balance of bold and floral flavors.</p>-->
 <!--                 <p class="simple-text">Overall, The Lavender Cafe is a delightful gem in the city's dining scene, providing a welcoming and relaxing atmosphere for all who visit.</p>-->
                 </div>
@@ -103,18 +103,18 @@
                     <img class="logo-img" src="images/logo.png" alt="">
                 </div>
                 <div class="footer-widget">
-                    <h5 class="h4">The Lavender Cafe</h5>
+                    <h4 class="h3">The Lavender Cafe</h4>
                     <ul>
-                        <li><a href="#home">Home</a></li>
-                        <li><a href="menu.html">Menu</a></li>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#contact">Contact</a></li>
-                        <li><a href="profile.html">Profile</a></li>
-                        <li><a href="login.html">Log in</a></li>
+                        <li><a href="#home" class="h5">Home</a></li>
+                        <li><a href="menu.html" class="h5">Menu</a></li>
+                        <li><a href="#about" class="h5">About</a></li>
+                        <li><a href="#contact" class="h5">Contact</a></li>
+                        <li><a href="profile.html" class="h5">Profile</a></li>
+                        <li><a href="login.html" class="h5">Log in</a></li>
                     </ul>
                 </div>
                 <div class="footer-widget">
-                    <h5 class="h4">Follow us:</h5>
+                    <h4 class="h3">Follow us:</h4>
                     <ul class="social-nav">
                         <li>
                             <a href="https://www.instagram.com/khrystyna_dol" class="social-nav-link" target="_blank">
@@ -132,7 +132,7 @@
         </div>
     </div>
     <div class="footer-bottom">
-        <p class="simple-text">© Copyright 2023 The Lavender Cafe. All rights reserved. Designed by Khrystyna Dolynska</p>
+        <p class="simple-text h5">© Copyright 2023 The Lavender Cafe. All rights reserved. Designed by Khrystyna Dolynska</p>
     </div>
 </footer>
 </html>
