--- a/menu.html
+++ b/menu.html
@@ -33,48 +33,81 @@
                 <img src="./images/lavender-latte.jpg" alt="">
                 <div class="content">
                     <h4 class="h5">Lavender latte</h4>
-                    <p class="simple-text">Enjoy a fragrant Lavender Latte made with freshly brewed espresso and lavender-infused milk.</p>
+                    <p class="simple-text h5">Enjoy a fragrant Lavender Latte made with freshly brewed espresso and lavender-infused milk.</p>
                 </div>
             </div>
             <div class="menu-member hover-effect">
                 <img src="./images/ice-cream-muffin.jpg" alt="">
                 <div class="content">
                     <h4 class="h5">Ice cream muffin</h4>
-                    <p class="simple-text">Satisfy your sweet tooth with our Ice Cream Muffin, which features a warm, moist muffin topped with a scoop of creamy ice cream</p>
+                    <p class="simple-text h5">Satisfy your sweet tooth with our Ice Cream Muffin, which features a warm, moist muffin topped with a scoop of creamy ice cream</p>
                 </div>
             </div>
             <div class="menu-member hover-effect">
-                <img src="./images/caramel-coffee.jpg" alt="">
+                <img src="./images/caramel-coffee-3.png" alt="">
                 <div class="content">
                     <h4 class="h5">Caramel coffee</h4>
-                    <p class="simple-text">Sip on our rich and smooth Caramel Coffee, made with freshly brewed coffee and a drizzle of sweet caramel.</p>
+                    <p class="simple-text h5">Sip on our rich and smooth Caramel Coffee, made with freshly brewed coffee and a drizzle of sweet caramel.</p>
                 </div>
             </div>
             <div class="menu-member hover-effect">
                 <img src="./images/belgium-waffle.jpg" alt="">
                 <div class="content">
                     <h4 class="h5">Belgium waffle</h4>
-                    <p class="simple-text">Indulge in our classic Belgium Waffle, served with a generous dollop of whipped cream and fresh berries.</p>
+                    <p class="simple-text h5">Indulge in our classic Belgium Waffle, served with a generous dollop of whipped cream and fresh berries.</p>
                 </div>
             </div>
+        </div>
+        <div class="four-col-grid">
             <div class="menu-member hover-effect">
                 <img src="./images/lavender-macaroon-white.jpg" alt="">
                 <div class="content">
                     <h4 class="h5">White lavender macaroon</h4>
-                    <p class="simple-text">Treat yourself to our delicate and sweet macaroon, which features a soft and chewy cookie filled with creamy white chocolate ganache.</p>
+                    <p class="simple-text h5">Treat yourself to our delicate and sweet macaroon, which features a soft and chewy cookie filled with creamy white chocolate ganache.</p>
                 </div>
             </div>
             <div class="menu-member hover-effect">
                 <img src="./images/berry-pie.jpg" alt="">
                 <div class="content">
                     <h4 class="h5">Berry pie</h4>
-                    <p class="simple-text">Delight in our mouthwatering Berry Pie, made with a flaky crust and filled with a medley of fresh berries.</p>
+                    <p class="simple-text h5">Delight in our mouthwatering Berry Pie, made with a flaky crust and filled with a medley of fresh berries.</p>
+                </div>
+            </div>
+            <div class="menu-member hover-effect">
+                <img src="./images/oreo-donut.jpg" alt="">
+                <div class="content">
+                    <h4 class="h5">Oreo donut</h4>
+                    <p class="simple-text h5">Indulge in the heavenly taste of our Oreo Donut, a classic donut with a crunchy Oreo topping and creamy vanilla filling.</p>
+                </div>
+            </div>
+            <div class="menu-member hover-effect">
+                <img src="./images/lavender-lemonade.jpg" alt="">
+                <div class="content">
+                    <h4 class="h5">Lavender lemonade</h4>
+                    <p class="simple-text h5">Quench your thirst with our refreshing Lavender Lemonade, a delightful combination of tangy lemon juice and fragrant lavender syrup</p>
+                </div>
+            </div>
+        </div>
+        <div class="four-col-grid">
+            <div class="menu-member hover-effect">
+                <img src="./images/raspberry-smoothie.jpg" alt="">
+                <div class="content">
+                    <h4 class="h5">Raspberry smoothie</h4>
+                    <p class="simple-text h5">Cool down with our refreshing Raspberry Smoothie, a blend of sweet and tangy raspberries, creamy yogurt, and a touch of honey.</p>
+                </div>
+            </div>
+            <div class="menu-member hover-effect">
+                <img src="./images/lavender-tea.jpg" alt="">
+                <div class="content">
+                    <h4 class="h5">Lavender tea</h4>
+                    <p class="simple-text h5">Relax and unwind with our soothing Lavender Tea, made with fragrant lavender flowers and a delicate blend of herbs.</p>
                 </div>
             </div>
         </div>
     </div>
 </section>
 </body>
+<!-- FOOTER -->
 <footer>
     <div class="footer-top">
         <div class="container">
@@ -83,18 +116,18 @@
                     <img class="logo-img" src="images/logo.png" alt="">
                 </div>
                 <div class="footer-widget">
-                    <h5 class="h4">The Lavender Cafe</h5>
+                    <h4 class="h3">The Lavender Cafe</h4>
                     <ul>
-                        <li><a href="index.html#home">Home</a></li>
-                        <li><a href="#menu">Menu</a></li>
-                        <li><a href="index.html#about">About</a></li>
-                        <li><a href="index.html#contact">Contact</a></li>
-                        <li><a href="profile.html">Profile</a></li>
-                        <li><a href="login.html">Log in</a></li>
+                        <li><a href="index.html#home" class="h5">Home</a></li>
+                        <li><a href="menu.html" class="h5">Menu</a></li>
+                        <li><a href="index.html#about" class="h5">About</a></li>
+                        <li><a href="index.html#contact" class="h5">Contact</a></li>
+                        <li><a href="profile.html" class="h5">Profile</a></li>
+                        <li><a href="login.html" class="h5">Log in</a></li>
                     </ul>
                 </div>
                 <div class="footer-widget">
-                    <h5 class="h4">Follow us:</h5>
+                    <h4 class="h3">Follow us:</h4>
                     <ul class="social-nav">
                         <li>
                             <a href="https://www.instagram.com/khrystyna_dol" class="social-nav-link" target="_blank">
@@ -112,7 +145,7 @@
         </div>
     </div>
     <div class="footer-bottom">
-        <p class="simple-text">© Copyright 2023 The Lavender Cafe. All rights reserved. Designed by Khrystyna Dolynska</p>
+        <p class="simple-text h5">© Copyright 2023 The Lavender Cafe. All rights reserved. Designed by Khrystyna Dolynska</p>
     </div>
 </footer>
 </html>
