--- a/login.html
+++ b/login.html
@@ -6,42 +6,65 @@
 <!--    <link rel="stylesheet" href="/style-1.css">-->
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
-<nav class="navbar colored-navbar">
-    <div class="container">
-        <a href="#" class="logo">
-            <img src="images/logo.png" alt="">
-            <p class="cafe-name">The Lavender cafe</p>
-        </a>
-        <ul class="nav-items">
-            <li><a href="index.html#home" class="nav-item">Home</a></li>
-            <li><a href="menu.html" class="nav-item">Menu</a></li>
-            <li><a href="index.html#about" class="nav-item">About</a></li>
-            <li><a href="index.html#contact" class="nav-item">Contact</a></li>
-            <li><a href="profile.html" class="nav-item">Profile</a></li>
-        </ul>
-        <div class="nav-toggler"><i class="ri-menu-fill"></i></div>
-    </div>
-</nav>
-<body>
-<div class='form-bold-line'></div>
-<div class='form-container'>
-    <div class='form-window'>
-        <div class='form-overlay'></div>
-        <div class='form-content'>
-            <div class='form-welcome'>Login</div>
-            <div class='input-fields'>
-                <label>
-                    <input type='email' placeholder='Email' class='input-field full-width no-border'></input>
-                </label>
-                <label>
-                    <input type='password' placeholder='Password' class='input-field full-width no-border'></input>
-                </label>
+<!--<nav class="navbar colored-navbar">-->
+<!--    <div class="container">-->
+<!--        <a href="#" class="logo">-->
+<!--            <img src="images/logo.png" alt="">-->
+<!--            <p class="cafe-name">The Lavender cafe</p>-->
+<!--        </a>-->
+<!--        <ul class="nav-items">-->
+<!--            <li><a href="index.html#home" class="nav-item">Home</a></li>-->
+<!--            <li><a href="menu.html" class="nav-item">Menu</a></li>-->
+<!--            <li><a href="index.html#about" class="nav-item">About</a></li>-->
+<!--            <li><a href="index.html#contact" class="nav-item">Contact</a></li>-->
+<!--            <li><a href="profile.html" class="nav-item">Profile</a></li>-->
+<!--        </ul>-->
+<!--        <div class="nav-toggler"><i class="ri-menu-fill"></i></div>-->
+<!--    </div>-->
+<!--</nav>-->
+<body class="gradient-body">
+<div class="form-container"> <!-- login-container -->
+    <div class="title">Login</div>
+    <div class="content">
+        <form action="#">
+            <div class="user-details">
+                <div class="input-box-login input-box">
+<!--                    <span class="details">Email</span>-->
+                    <label>
+                        <input type="email" placeholder="Enter your email" class='input-field full-width no-border' required>
+                    </label>
+                </div>
+                <div class="input-box-login input-box">
+<!--                    <span class="details">Password</span>-->
+                    <label>
+                        <input type="password" placeholder="Enter your password" class='input-field full-width no-border' required>
+                    </label>
+                </div>
             </div>
             <div class="center-btn"><button class='primary-btn'>Login</button></div>
             <div class='form-spacing'>Haven't registered yet? <a href="registration.html"><span class='form-highlight'>Sign up</span></a></div>
-        </div>
+        </form>
     </div>
 </div>
+<!--<div class='form-bold-line'></div>-->
+<!--<div class='form-container'>-->
+<!--    <div class='form-window'>-->
+<!--        <div class='form-overlay'></div>-->
+<!--        <div class='form-content'>-->
+<!--            <div class='form-welcome'>Login</div>-->
+<!--            <div class='input-fields'>-->
+<!--                <label>-->
+<!--                    <input type='email' placeholder='Email' class='input-field full-width no-border'></input>-->
+<!--                </label>-->
+<!--                <label>-->
+<!--                    <input type='password' placeholder='Password' class='input-field full-width no-border'></input>-->
+<!--                </label>-->
+<!--            </div>-->
+<!--            <div class="center-btn"><button class='primary-btn'>Login</button></div>-->
+<!--            <div class='form-spacing'>Haven't registered yet? <a href="registration.html"><span class='form-highlight'>Sign up</span></a></div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
 </body>
 <!-- FOOTER -->
 <footer>
@@ -52,18 +75,18 @@
                     <img class="logo-img" src="images/logo.png" alt="">
                 </div>
                 <div class="footer-widget">
-                    <h5 class="h4">The Lavender Cafe</h5>
+                    <h4 class="h3">The Lavender Cafe</h4>
                     <ul>
-                        <li><a href="index.html#home">Home</a></li>
-                        <li><a href="menu.html">Menu</a></li>
-                        <li><a href="index.html#about">About</a></li>
-                        <li><a href="index.html#contact">Contact</a></li>
-                        <li><a href="profile.html">Profile</a></li>
-                        <li><a href="login.html">Log in</a></li>
+                        <li><a href="index.html#home" class="h5">Home</a></li>
+                        <li><a href="menu.html" class="h5">Menu</a></li>
+                        <li><a href="index.html#about" class="h5">About</a></li>
+                        <li><a href="index.html#contact" class="h5">Contact</a></li>
+                        <li><a href="profile.html" class="h5">Profile</a></li>
+                        <li><a href="login.html" class="h5">Log in</a></li>
                     </ul>
                 </div>
                 <div class="footer-widget">
-                    <h5 class="h4">Follow us:</h5>
+                    <h4 class="h3">Follow us:</h4>
                     <ul class="social-nav">
                         <li>
                             <a href="https://www.instagram.com/khrystyna_dol" class="social-nav-link" target="_blank">
@@ -81,7 +104,7 @@
         </div>
     </div>
     <div class="footer-bottom">
-        <p class="simple-text">© Copyright 2023 The Lavender Cafe. All rights reserved. Designed by Khrystyna Dolynska</p>
+        <p class="simple-text h5">© Copyright 2023 The Lavender Cafe. All rights reserved. Designed by Khrystyna Dolynska</p>
     </div>
 </footer>
 </html>
