--- a/profile.html
+++ b/profile.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Profile Page</title>
+  <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
 <!--  <link rel="stylesheet" type="text/css" href="styles-1.css">-->
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
@@ -24,46 +25,36 @@
 </nav>
 <body>
 <div class="profile-card">
-  <h2>Profile</h2>
   <div class="card">
     <div class="card-body">
-      <i class="fa fa-pen fa-xs edit"></i>
+      <i class="ri-edit-box-line edit"></i>
       <table>
         <tbody>
+        <h2>Profile</h2>
         <tr>
-          <td>Name</td>
-          <td>:</td>
-          <td>John</td>
+          <td class="h5">Name</td>
+          <td class="h5">:</td>
+          <td class="h5">John</td>
         </tr>
         <tr>
-          <td>Surname</td>
-          <td>:</td>
-          <td>Smith</td>
+          <td class="h5">Surname</td>
+          <td class="h5">:</td>
+          <td class="h5">Smith</td>
         </tr>
         <tr>
-          <td>Email</td>
-          <td>:</td>
-          <td>johnsmith@example.com</td>
+          <td class="h5">Email</td>
+          <td class="h5">:</td>
+          <td class="h5">johnsmith@example.com</td>
         </tr>
         <tr>
-          <td>Phone</td>
-          <td>:</td>
-          <td>123-456-7890</td>
+          <td class="h5">Phone</td>
+          <td class="h5">:</td>
+          <td class="h5">123-456-7890</td>
         </tr>
         <tr>
-          <td>Hobbies</td>
-          <td>:</td>
-          <td>Diving, Reading Book</td>
-        </tr>
-        <tr>
-          <td>Job</td>
-          <td>:</td>
-          <td>Web Developer</td>
-        </tr>
-        <tr>
-          <td>Skill</td>
-          <td>:</td>
-          <td>PHP, HTML, CSS, Java</td>
+          <td class="h5">Birth date</td>
+          <td class="h5">:</td>
+          <td class="h5">27.03.2004</td>
         </tr>
         </tbody>
       </table>
@@ -87,6 +78,7 @@
 <!--  </div>-->
 </div>
 </body>
+<!-- FOOTER -->
 <footer>
   <div class="footer-top">
     <div class="container">
@@ -95,17 +87,18 @@
           <img class="logo-img" src="images/logo.png" alt="">
         </div>
         <div class="footer-widget">
-          <h5 class="h4">The Lavender Cafe</h5>
+          <h4 class="h3">The Lavender Cafe</h4>
           <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#menu">Menu</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <li><a href="#profile">Profile</a></li>
+            <li><a href="index.html#home" class="h5">Home</a></li>
+            <li><a href="menu.html" class="h5">Menu</a></li>
+            <li><a href="index.html#about" class="h5">About</a></li>
+            <li><a href="index.html#contact" class="h5">Contact</a></li>
+            <li><a href="profile.html" class="h5">Profile</a></li>
+            <li><a href="login.html" class="h5">Log in</a></li>
           </ul>
         </div>
         <div class="footer-widget">
-          <h5 class="h4">Follow us:</h5>
+          <h4 class="h3">Follow us:</h4>
           <ul class="social-nav">
             <li>
               <a href="https://www.instagram.com/khrystyna_dol" class="social-nav-link" target="_blank">
@@ -123,7 +116,7 @@
     </div>
   </div>
   <div class="footer-bottom">
-    <p class="simple-text">© Copyright 2023 The Lavender Cafe. All rights reserved. Designed by Khrystyna Dolynska</p>
+    <p class="simple-text h5">© Copyright 2023 The Lavender Cafe. All rights reserved. Designed by Khrystyna Dolynska</p>
   </div>
 </footer>
 </html>
