--- a/registration.html
+++ b/registration.html
@@ -6,55 +6,117 @@
     <!--    <link rel="stylesheet" href="/style-1.css">-->
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
-<body>
-<nav class="navbar colored-navbar">
-    <div class="container">
-        <a href="#" class="logo">
-            <img src="images/logo.png" alt="">
-            <p class="cafe-name">The Lavender cafe</p>
-        </a>
-        <ul class="nav-items">
-            <li><a href="index.html#home" class="nav-item">Home</a></li>
-            <li><a href="menu.html" class="nav-item">Menu</a></li>
-            <li><a href="index.html#about" class="nav-item">About</a></li>
-            <li><a href="index.html#contact" class="nav-item">Contact</a></li>
-            <li><a href="profile.html" class="nav-item">Profile</a></li>
-        </ul>
-        <div class="nav-toggler"><i class="ri-menu-fill"></i></div>
-    </div>
-</nav>
-<div class='form-bold-line'></div>
-<div class='form-container'>
-    <div class='form-window'>
-        <div class='form-overlay'></div>
-        <div class='form-content'>
-            <div class='form-welcome'>Register</div>
-            <div class='input-fields'>
+<!--<nav class="navbar colored-navbar">-->
+<!--    <div class="container">-->
+<!--        <a href="#" class="logo">-->
+<!--            <img src="images/logo.png" alt="">-->
+<!--            <p class="cafe-name">The Lavender cafe</p>-->
+<!--        </a>-->
+<!--        <ul class="nav-items">-->
+<!--            <li><a href="index.html#home" class="nav-item">Home</a></li>-->
+<!--            <li><a href="menu.html" class="nav-item">Menu</a></li>-->
+<!--            <li><a href="index.html#about" class="nav-item">About</a></li>-->
+<!--            <li><a href="index.html#contact" class="nav-item">Contact</a></li>-->
+<!--            <li><a href="profile.html" class="nav-item">Profile</a></li>-->
+<!--        </ul>-->
+<!--        <div class="nav-toggler"><i class="ri-menu-fill"></i></div>-->
+<!--    </div>-->
+<!--</nav>-->
+<body class="gradient-body">
+<div class="form-container">
+    <div class="title">Registration</div>
+    <div class="content">
+        <form action="#">
+            <div class="user-details">
+                <div class="input-box">
+<!--                    <span class="details">Name</span>-->
                     <label>
-                        <input type='text' placeholder='Name' class='input-field full-width no-border'></input>
+                        <input type="text" placeholder="Enter your name" class='input-field full-width no-border' required>
                     </label>
+                </div>
+                <div class="input-box">
                     <label>
-                        <input type='text' placeholder='Surname' class='input-field full-width no-border'></input>
+                        <input type="text" placeholder="Enter your surname" class='input-field full-width no-border' required>
                     </label>
+                </div>
+                <div class="input-box">
                     <label>
-                        <input type='email' placeholder='Email' class='input-field full-width no-border'></input>
+                        <input type="email" placeholder="Enter your email" class='input-field full-width no-border' required>
                     </label>
-<!--                    <label>-->
-<!--                        <input type='tel' placeholder='Phone number' class='input-field full-width no-border'></input>-->
-<!--                    </label>-->
-<!--                    <input type="tel" id="phone" name="phone" placeholder="Enter your phone number" pattern="[0-9]{12}">-->
+                </div>
+                <div class="input-box">
                     <label>
-                        <input type='password' placeholder='Password' class='input-field full-width no-border'></input>
+                        <input type="text" placeholder="Enter your phone number" class='input-field full-width no-border' required>
                     </label>
+                </div>
+                <div class="input-box">
                     <label>
-                        <input type='password' placeholder='Confirm password' class='input-field full-width no-border'></input>
+                        <input type="password" placeholder="Enter your password" class='input-field full-width no-border' required>
                     </label>
+                </div>
+                <div class="input-box">
+                    <label>
+                        <input type="password" placeholder="Confirm your password" class='input-field full-width no-border' required>
+                    </label>
+                </div>
             </div>
+<!--            <div class="gender-details">-->
+<!--                <input type="radio" name="gender" id="dot-1">-->
+<!--                <input type="radio" name="gender" id="dot-2">-->
+<!--                <input type="radio" name="gender" id="dot-3">-->
+<!--                <span class="gender-title">Gender</span>-->
+<!--                <div class="category">-->
+<!--                    <label for="dot-1">-->
+<!--                        <span class="dot one"></span>-->
+<!--                        <span class="gender">Male</span>-->
+<!--                    </label>-->
+<!--                    <label for="dot-2">-->
+<!--                        <span class="dot two"></span>-->
+<!--                        <span class="gender">Female</span>-->
+<!--                    </label>-->
+<!--                    <label for="dot-3">-->
+<!--                        <span class="dot three"></span>-->
+<!--                        <span class="gender">Prefer not to say</span>-->
+<!--                    </label>-->
+<!--                </div>-->
+<!--            </div>-->
             <div class="center-btn"><button class='primary-btn'>Register</button></div>
             <div class='form-spacing'>Already registered? <a href="login.html"><span class='form-highlight'>Log in</span></a></div>
-        </div>
+        </form>
     </div>
 </div>
+<!--<div class='form-bold-line'></div>-->
+<!--<div class='form-container'>-->
+<!--    <div class='form-window'>-->
+<!--        <div class='form-overlay'></div>-->
+<!--        <div class='form-content'>-->
+<!--            <div class='form-welcome'>Register</div>-->
+<!--            <div class='input-fields'>-->
+<!--                    <label>-->
+<!--                        <input type='text' placeholder='Name' class='input-field full-width no-border'></input>-->
+<!--                    </label>-->
+<!--                    <label>-->
+<!--                        <input type='text' placeholder='Surname' class='input-field full-width no-border'></input>-->
+<!--                    </label>-->
+<!--                    <label>-->
+<!--                        <input type='email' placeholder='Email' class='input-field full-width no-border'></input>-->
+<!--                    </label>-->
+<!--&lt;!&ndash;                    <label>&ndash;&gt;-->
+<!--&lt;!&ndash;                        <input type='tel' placeholder='Phone number' class='input-field full-width no-border'></input>&ndash;&gt;-->
+<!--&lt;!&ndash;                    </label>&ndash;&gt;-->
+<!--&lt;!&ndash;                    <input type="tel" id="phone" name="phone" placeholder="Enter your phone number" pattern="[0-9]{12}">&ndash;&gt;-->
+<!--                    <label>-->
+<!--                        <input type='password' placeholder='Password' class='input-field full-width no-border'></input>-->
+<!--                    </label>-->
+<!--                    <label>-->
+<!--                        <input type='password' placeholder='Confirm password' class='input-field full-width no-border'></input>-->
+<!--                    </label>-->
+<!--            </div>-->
+<!--            <div class="center-btn"><button class='primary-btn'>Register</button></div>-->
+<!--            <div class='form-spacing'>Already registered? <a href="login.html"><span class='form-highlight'>Log in</span></a></div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
 </body>
 <!-- FOOTER -->
 <footer>
@@ -65,17 +127,18 @@
                     <img class="logo-img" src="images/logo.png" alt="">
                 </div>
                 <div class="footer-widget">
-                    <h5 class="h4">The Lavender Cafe</h5>
+                    <h4 class="h3">The Lavender Cafe</h4>
                     <ul>
-                        <li><a href="index.html#home">Home</a></li>
-                        <li><a href="menu.html">Menu</a></li>
-                        <li><a href="index.html#about">About</a></li>
-                        <li><a href="index.html#contact">Contact</a></li>
-                        <li><a href="profile.html">Profile</a></li>
+                        <li><a href="index.html#home" class="h5">Home</a></li>
+                        <li><a href="menu.html" class="h5">Menu</a></li>
+                        <li><a href="index.html#about" class="h5">About</a></li>
+                        <li><a href="index.html#contact" class="h5">Contact</a></li>
+                        <li><a href="profile.html" class="h5">Profile</a></li>
+                        <li><a href="login.html" class="h5">Log in</a></li>
                     </ul>
                 </div>
                 <div class="footer-widget">
-                    <h5 class="h4">Follow us:</h5>
+                    <h4 class="h3">Follow us:</h4>
                     <ul class="social-nav">
                         <li>
                             <a href="https://www.instagram.com/khrystyna_dol" class="social-nav-link" target="_blank">
@@ -93,7 +156,7 @@
         </div>
     </div>
     <div class="footer-bottom">
-        <p class="simple-text">© Copyright 2023 The Lavender Cafe. All rights reserved. Designed by Khrystyna Dolynska</p>
+        <p class="simple-text h5">© Copyright 2023 The Lavender Cafe. All rights reserved. Designed by Khrystyna Dolynska</p>
     </div>
 </footer>
 </html>
