--- a/admin.html
+++ b/admin.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="sidebar">
-    <a href="#" class="logo">
+    <a href="index.html" class="logo">
         <img src="images/logo.png" alt="">
         <p class="cafe-name h3">The Lavender cafe</p>
     </a>
