--- a/order_list.html
+++ b/order_list.html
@@ -34,7 +34,7 @@
       </a>
     </li>
     <li>
-      <a href="#">
+      <a href="order_list.html">
         <i class='bx bx-list-ul' ></i>
         <span class="links-name">Order list</span>
       </a>
