--- a/add_item.html
+++ b/add_item.html
@@ -21,7 +21,7 @@
             </a>
         </li>
         <li>
-            <a href="#">
+            <a href="add_item.html">
                 <i class='bx bx-add-to-queue' ></i>
                 <span class="links-name">Add menu item</span>
             </a>
@@ -36,6 +36,12 @@
             <a href="#">
                 <i class='bx bx-list-ul' ></i>
                 <span class="links-name">Order list</span>
+            </a>
+        </li>
+        <li>
+            <a href="user_list.html">
+                <i class='bx bx-user' ></i>
+                <span class="links-name">User list</span>
             </a>
         </li>
         <li>
